@@ -81,6 +81,38 @@ fi
 AC_SUBST(HAVE_WCHAR_H)
 AC_SUBST(HAVE_WCSTR_H)
 
+dnl glib requires a 64-bit type
+dnl to support win32 add __int64
+AC_CHECK_SIZEOF(long long)
+
+AC_MSG_CHECKING(for format to printf and scanf a guint64)
+AC_CACHE_VAL(libIDL_cv_long_long_format,[
+    for format in ll q I64; do
+	AC_TRY_RUN([#include <stdio.h>  
+	    int main()
+	    {
+		long long b, a = -0x3AFAFAFAFAFAFAFALL;
+		char buffer[1000];
+		sprintf (buffer, "%${format}u", a);
+  		sscanf (buffer, "%${format}u", &b);
+		exit (b!=a);
+	    }
+	    ],
+	    libIDL_cv_long_long_format=${format}
+	    break)
+	done])
+if test -n "$libIDL_cv_long_long_format"; then
+    AC_MSG_RESULT(%${libIDL_cv_long_long_format}u)
+    IDL_LL="\"${libIDL_cv_long_long_format}\""
+    AC_SUBST(IDL_LL)
+else
+    AC_MSG_RESULT(none)
+    AC_MSG_ERROR([
+*** libIDL requires a 64 bit format type.
+])
+fi
+
+
 if test "x$GCC" = "xyes" -a "x$enable_compile_warnings" != "xno"; then
         WARN_CFLAGS="-Wall -Wunused -Wmissing-prototypes -Wmissing-declarations"
 else
